--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@
   margin: 0 2rem;
   width: 55rem;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content {
     margin: 0 1rem;
-    max-width: 20.5rem;
+    max-width: 90vw;
     font-size: 0.8rem;
+    height: 90vh;
+    justify-content: space-between;
   }
 }
 .container .main-content .latitude-longitude {
@@ -24,7 +26,7 @@
   margin: 2rem 0;
   color: #6B6B6B;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .latitude-longitude {
     flex-flow: column;
     align-items: center;
@@ -41,10 +43,10 @@
   width: 23rem;
   border-radius: 10px;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .latitude-longitude .latitude,
   .container .main-content .latitude-longitude .longitude {
-    width: 18.5rem;
+    width: 80vw;
   }
 }
 .container .main-content .button {
@@ -59,12 +61,12 @@
 .container .main-content .button:hover, .container .main-content .button:active {
   background: #007cff;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .search-button {
     order: 3;
   }
 }
-@media (max-width: 380px) {
+@media (max-width: 1100px) {
   .container .main-content .save-button {
     display: none;
   }
@@ -77,10 +79,12 @@
   margin: 2rem 0;
   border-radius: 10px;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .data-area {
     margin-bottom: 0;
-    height: 22rem;
+    height: 50vh;
+    justify-content: space-between;
+    padding-bottom: 20px;
   }
 }
 .container .main-content .data-area .data {
@@ -90,7 +94,7 @@
   align-items: center;
   padding: 0 2rem;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .data-area .data {
     padding: 0 1rem;
   }
@@ -98,7 +102,7 @@
 .container .main-content .data-area .data .label {
   width: 10%;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .data-area .data .label {
     width: 30%;
   }
@@ -107,7 +111,7 @@
   width: 20%;
   text-align: center;
 }
-@media (max-width: 380px) {
+@media (max-width: 500px) {
   .container .main-content .data-area .data .dash {
     width: 10%;
   }
@@ -130,11 +134,9 @@
   border-radius: 10px;
   overflow-y: auto;
 }
-@media (max-width: 380px) {
+@media (max-width: 1100px) {
   .container .saved-history {
     display: none;
-    width: 0;
-    margin: 0;
   }
 }
 .container .saved-history .index {
