--- a/style.scss
+++ b/style.scss
@@ -10,11 +10,13 @@
     margin: 0 2rem;
     width: 55rem;
 
-    @media (max-width: 380px)
+    @media (max-width: 500px)
     {
       margin: 0 1rem;
-      max-width: 20.5rem;
+      max-width: 90vw;
       font-size: 0.8rem;
+      height: 90vh;
+      justify-content: space-between;
     }
 
     .latitude-longitude
@@ -26,7 +28,7 @@
       margin: 2rem 0;
       color: #6B6B6B;
 
-      @media (max-width: 380px)
+      @media (max-width: 500px)
       {
         flex-flow: column;
         align-items: center;
@@ -43,9 +45,9 @@
         background: #E5E5E5;
         width: 23rem;
         border-radius: 10px;
-        @media (max-width: 380px)
+        @media (max-width: 500px)
         {
-          width: 18.5rem;
+          width: 80vw;
         }
       }
     }
@@ -67,14 +69,14 @@
     }
     .search-button
     {
-      @media (max-width: 380px)
+      @media (max-width: 500px)
       {
         order: 3;
       }
     }
     .save-button
     {
-      @media (max-width: 380px)
+      @media (max-width: 1100px)
       {
         display: none;
       }
@@ -89,10 +91,12 @@
       margin: 2rem 0;
       border-radius: 10px;
 
-      @media (max-width: 380px)
+      @media (max-width: 500px)
       {
         margin-bottom: 0;
-        height: 22rem;
+        height: 50vh;
+        justify-content: space-between;
+        padding-bottom: 20px;
       }
 
       .data
@@ -102,7 +106,7 @@
         flex-flow: row;
         align-items: center;
         padding: 0 2rem;
-        @media (max-width: 380px)
+        @media (max-width: 500px)
         {
           padding: 0 1rem;
         }
@@ -110,7 +114,7 @@
         .label
         {
           width: 10%;
-          @media (max-width: 380px)
+          @media (max-width: 500px)
           {
             width: 30%;
           }
@@ -120,7 +124,7 @@
         {
           width: 20%;
           text-align: center;
-          @media (max-width: 380px)
+          @media (max-width: 500px)
           {
             width: 10%
           }
@@ -151,11 +155,9 @@
     background: #E5E5E5;
     border-radius: 10px;
     overflow-y: auto;
-    @media (max-width: 380px)
+    @media (max-width: 1100px)
     {
       display: none;
-      width: 0;
-      margin: 0;
     }
 
     .index
